# corset

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs-gh-pages.yml
docs/jp-lite/: environment.yml  jupyter-lite.json  jupyter_lite_config.json
docs/jp-lite/files/: template.ipynb
docs/notebooks/: .gitignore  analyzing_solutions.ipynb  basic_usage.ipynb  beam_constraints.ipynb  configuration.ipynb  fixed_optics.ipynb  lenses_and_lens_lists.ipynb  shifting_ranges_and_selections.ipynb
docs/source/: basic_usage.ipynb  conf.py  config.rst  core.rst  database.rst  index.rst  intro.rst  plot.rst  serialize.rst  solver.rst
misc/logo/: gen_logo.py
src/corset/: __init__.py  analysis.py  analyze.py  config.py  core.py  database.py  plot.py  serialize.py  solver.py
src/corset/databases/quantum_control/: Combined_L1064_M0.csv  Combined_L1064_M10.csv  Combined_L1064_M20.csv  LINOS_BV_L1064_M0.csv  LINOS_BV_L1064_M10.csv  LINOS_BV_L1064_M20.csv  LINOS_BX_L1064_M0.csv  LINOS_BX_L1064_M10.csv  LINOS_BX_L1064_M20.csv  LINOS_PV_L1064_M0.csv  LINOS_PV_L1064_M10.csv  LINOS_PV_L1064_M20.csv  LINOS_PX_L1064_M0.csv  LINOS_PX_L1064_M10.csv  LINOS_PX_L1064_M20.csv  LINOS_VP_L1064_M0.csv  LINOS_VP_L1064_M10.csv  LINOS_VP_L1064_M20.csv  LINOS_XP_L1064_M0.csv  LINOS_XP_L1064_M10.csv  LINOS_XP_L1064_M20.csv  Thorlabs_BX_L1064_M0.csv  Thorlabs_BX_L1064_M10.csv  Thorlabs_BX_L1064_M20.csv  Thorlabs_PX_L1064_M0.csv  Thorlabs_PX_L1064_M10.csv  Thorlabs_PX_L1064_M20.csv  Thorlabs_XP_L1064_M0.csv  Thorlabs_XP_L1064_M10.csv  Thorlabs_XP_L1064_M20.csv
