[project]
authors = [{name = "Lorenz Kies", email = "dev@lkies.net"}]
dependencies = ["numpy>=2.3.4,<3", "scipy>=1.16.3,<2", "pandas>=2.3.3,<3", "matplotlib>=3.10.7,<4"]
name = "corset"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
corset = { path = ".", editable = true }

[tool.pixi.tasks]

[dependency-groups]
dev = ["ipykernel"]

[tool.pixi.environments]
dev = ["dev"]

[tool.pytest.ini_options]
# Ensure pytest looks for tests in the tests/ directory and uses the normal test_*.py pattern
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
target-version = "py312"
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # pep8-naming
    "N",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
lint.ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # LongExceptions
    "TRY003",
]
