[project]
authors = [{name = "Lorenz Kies", email = "dev@lkies.net"}]
dependencies = ["numpy>=2.3.4,<3", "scipy>=1.16.3,<2", "pandas>=2.3.3,<3", "matplotlib>=3.10.7,<4", "pyyaml>=6.0.3,<7"]
name = "beam-corset"
requires-python = ">= 3.11"
version = "0.3.0"
description = "Beam Corset is a Gaussian optics mode matching tool made for use in Jupyter notebooks."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Source = "https://github.com/lkies/corset"
Documentation = "https://lkies.github.io/corset"
Issues = "https://github.com/lkies/corset/issues"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/corset"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
"beam-corset" = { path = ".", editable = true }

[dependency-groups]
dev = ["ipykernel", "nbconvert>=7.16.6,<8", "build>=1.3.0,<2", "twine>=6.2.0,<7"]
doc = [
    "sphinx>=9.0.2,<10",
    "sphinx-book-theme>=1.1.4,<2",
    "numpydoc>=1.10.0,<2",
    "sphinx-autodoc-typehints>=3.5.2,<4",
    "nbsphinx>=0.9.8,<0.10",
    "sphinx-copybutton>=0.5.2,<0.6",
]

[tool.pixi.feature.doc.dependencies]
pandoc = ">=3.8.3,<4" # this only installs properly as a conda dependency

[tool.pixi.feature.jp-lite.dependencies]
pip = "*"
jupyterlite-xeus = ">=4.4.0,<5"
jupyter_server = ">=2.17.0,<3"


[tool.pixi.environments]
dev = ["dev"]
doc = ["doc", "dev"]
jp-lite = ["jp-lite"]

[tool.pixi.tasks]
build = { cmd = "python -m build -o dist", default-environment = "dev" }
publish = { cmd = "twine upload dist/*", default-environment = "dev" }
build-docs = { cmd = "sphinx-build -M html docs/source/ docs/build/", default-environment = "doc" }
prepare-jp-lite-doc-notebooks = { cmd = [
    "rm", "-rf", "docs/jp-lite/files/guide/",
    "&&", "mkdir", "-p", "docs/jp-lite/files/guide/",
    "&&", "cp", "-r", "docs/notebooks/*", "docs/jp-lite/files/guide/"
], default-environment = "doc" }
build-jp-lite = { cmd = [
    "cd", "docs/jp-lite/", "&&",
    "jupyter", "lite", "build",
], default-environment = "jp-lite", depends-on = ["prepare-jp-lite-doc-notebooks"] }
build-pages = { depends-on = ["build-docs", "build-jp-lite"] }

[tool.pytest.ini_options]
# Ensure pytest looks for tests in the tests/ directory and uses the normal test_*.py pattern
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
target-version = "py312"
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # pep8-naming
    "N",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
lint.ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # LongExceptions
    "TRY003",
]
